cambios del main

--- a/index.html
+++ b/index.html
@@ -50,7 +50,53 @@
             <input class="input_buscador" type="text" placeholder="Buscar...">
             <button class="boton_buscador" type="submit">Buscar</button>
           </div>
+
+
+
           <div class="cajas_empresas">
+            <div class="caja_1">
+              <!-- <img class="image_companies" src="/img/4851696.jpg" alt="Code">               -->
+
+            </div>
+            <div class="caja_2">
+              <!-- <img class="image_companies" src="/img/4851696.jpg" alt="Code">               -->
+
+            </div>
+            <div class="caja_3">
+              <!-- <img class="image_companies" src="/img/4851696.jpg" alt="Code">               -->
+
+            </div>
+            <div class="caja_4">
+                  <!-- <img class="image_companies" src="/img/4851696.jpg" alt="Code">               -->
+            </div>
+            <div class="caja_5">
+              <!-- <img class="image_companies" src="/img/4851696.jpg" alt="Code">               -->
+
+            </div>
+            <div class="caja_6">
+              <!-- <img class="image_companies" src="/img/4851696.jpg" alt="Code">               -->
+
+            </div>
+
+
+            <div class="caja_7">
+              <!-- <img class="image_companies" src="/img/4851696.jpg" alt="Code">               -->
+
+            </div>
+            <div class="caja_8">
+              <!-- <img class="image_companies" src="/img/4851696.jpg" alt="Code">               -->
+
+            </div>
+            <div class="caja_9">
+              <!-- <img class="image_companies" src="/img/4851696.jpg" alt="Code">               -->
+
+            </div>
+            <div class="caja_10">
+              <!-- <img class="image_companies" src="/img/4851696.jpg" alt="Code">               -->
+
+            </div>
+            
+
 
           </div>
 
