--- a/index_en.html
+++ b/index_en.html
@@ -15,21 +15,21 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
-    <!-- HAMBURGER MENU -->
+    <!-- MENÚ HAMBURGUESA -->
     <button class="burger" onclick="toggleMenu()"></button>
     <div class="background"></div>
     <div class="menu">
         <nav>
-            <a href="/HTML/ofertas_descripcion_en.html" class="burger_menu_item_1" style="animation-delay: 0.1s">Offers</a>
+            <a href="/HTML/ofertas_en.html" class="burger_menu_item_1" style="animation-delay: 0.1s">Offers</a>
             <a href="/HTML/rutas_en.html" class="burger_menu_item_2" style="animation-delay: 0.3s">Paths</a>
-            <a href="/HTML/acerca_en.html" class="burger_menu_item_3" style="animation-delay: 0.4s">About</a>
-            <a href="/HTML/signup_en.html" class="burger_menu_item_4" style="animation-delay: 0.5s">Sign Up</a>
-            <a href="/HTML/signin_en.html" class="burger_menu_item_5" style="animation-delay: 0.6s">Log In</a>
+            <a href="/HTML/acerca_en.html" class="burger_menu_item_3" style="animation-delay: 0.4s">About us</a>
+            <a href="/HTML/signup_en.html" class="burger_menu_item_4" style="animation-delay: 0.5s">Sign up</a>
+            <a href="/HTML/signin_en.html" class="burger_menu_item_5" style="animation-delay: 0.6s">Sign in</a>
         </nav>
     </div>
     <!-- CONTENT -->
     <div id="container">
-        <!------------------------------- MENU ------------------------------>
+        <!------------------------------- MENÚ ------------------------------>
         <nav class="container_menu">
             <header class="header_container">
                 <span class="brackets bracket_1">{</span>
@@ -37,11 +37,11 @@
                 <span class="brackets bracket_2">}</span>
             </header>
             <ul class="container_list">
-                <li class="item item_1"><a href="/HTML/ofertas_descripcion_en.html">Offers</a></li>
+                <li class="item item_1"><a href="/HTML/ofertas_en.html">Offers</a></li>
                 <li class="item item_2"><a href="/HTML/rutas_en.html">Paths</a></li>
-                <li class="item item_3"><a href="/HTML/acerca_en.html">About</a></li>
-                <li class="item item_4"><a href="/HTML/signup_en.html">Sign Up</a></li>
-                <li class="item item_5"><a href="/HTML/signin_en.html">Log In</a></li>
+                <li class="item item_3"><a href="/HTML/acerca_en.html">About us</a></li>
+                <li class="item item_4"><a href="/HTML/signup_en.html">Sign up</a></li>
+                <li class="item item_5"><a href="/HTML/signin_en.html">Sign in</a></li>
             </ul>
             <div class="language_container">
                 <ion-icon name="language-outline" class="language_icon"></ion-icon>
@@ -52,52 +52,52 @@
         <main class="container_main_index">
           <!-- SLOGAN -->
             <div class="container_slogan">
-                <h2 class="text_slogan">Get your first developer job!</h2>
+                <h2 class="text_slogan">Get your first job as a software developer!</h2>
             </div>
           <!-- SEARCHER -->
             <div class="search_container">
-                <input class="input_search" type="text" placeholder="Frontend/Backend Developer" title="Search job">
-                <a href="./HTML/offers_en.html"><button class="button_search" type="submit" title="Search job">Search</button></a>
+                <input class="input_search" type="text" placeholder="Frontend/Backend Developer" title="Search the offer that fits you">
+                <a href="./HTML/ofertas_en.html"><button class="button_search" type="submit" title="Search offer">Search</button></a>
             </div>
           <!-- GENERAL TEXT -->
           <div class="container_text">
-              <h3 class="text_images">You could be part of the top companies</h3>
+              <h3 class="text_images">You could be part of top companies</h3>
           </div>
           <!-- COMPANY_IMAGES -->
           <div class="box_container_companies">
-              <div class="company_boxes box_1">
+              <div class="company_boxes caja_1">
                   <img class="image_companies" src="/img/openAI_company.png" alt="OpenAI" title="OpenAI">
               </div>
-              <div class="company_boxes box_2">
+              <div class="company_boxes caja_2">
                   <img class="image_companies" src="/img/cisco_company.jpg" alt="Cisco" title="Cisco">
               </div>
-              <div class="company_boxes box_3">
+              <div class="company_boxes caja_3">
                   <img class="image_companies" src="/img/mawesi_company.png" alt="Mawesi" title="Mawesi">
               </div>
-              <div class="company_boxes box_4">
+              <div class="company_boxes caja_4">
                   <img class="image_companies" src="/img/google_company.jpg" alt="Google" title="Google">
               </div>
-              <div class="company_boxes box_5">
+              <div class="company_boxes caja_5">
                   <img class="image_companies" src="/img/kaspersky_company.png" alt="Kaspersky" title="Kaspersky">
               </div>
-              <div class="company_boxes box_6">
+              <div class="company_boxes caja_6">
                   <img class="image_companies" src="/img/mercado_libre_company.png" alt="Mercado Libre" title="Mercado Libre">    
               </div>
-              <div class="company_boxes box_7">
+              <div class="company_boxes caja_7">
                   <img class="image_companies" src="/img/redhat_company.jpg" alt="RedHat" title="RedHat">
               </div>
-              <div class="company_boxes box_8">
+              <div class="company_boxes caja_8">
                   <img class="image_companies" src="/img/globant_company.png" alt="Globant" title="Globant">
               </div>
-              <div class="company_boxes box_9">
+              <div class="company_boxes caja_9">
                   <img class="image_companies" src="/img/meta_company.png" alt="Meta" title="Meta">   
               </div>
-              <div class="company_boxes box_10">
+              <div class="company_boxes caja_10">
                   <img class="image_companies" src="/img/x_company.jpg" alt="x" title="x">
             </div>
         </div>
         </main>
-        <!-- FOOTER -->
+        <!--FOOTER-->
         <footer class="footer">
             <div class="waves">
                 <div class="wave" id="wave1"></div>
