--- a/HTML/acerca_en.html
+++ b/HTML/acerca_en.html
@@ -53,7 +53,7 @@
         <main class="container_main_acerca">
             
             <div class="container_acerca_de">
-                <section class="frontend1">
+                <section class="sesion_acerca">
                   
 
                     <h2 class="h2_container">Why?</h2>
