--- a/index_en.html
+++ b/index_en.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{First_CodeJob}</title>
-    <link rel="stylesheet" href="/CSS/variables.css">
-    <link rel="stylesheet" href="/CSS/header.css">
-    <link rel="stylesheet" href="/CSS/index.css">
-    <link rel="stylesheet" href="/CSS/footer.css">
+    <link rel="stylesheet" href="CSS/variables.css">
+    <link rel="stylesheet" href="CSS/header.css">
+    <link rel="stylesheet" href="CSS/index.css">
+    <link rel="stylesheet" href="CSS/footer.css">
     <script type="text/javascript">
         const toggleMenu = () => document.body.classList.toggle("open");
     </script>
@@ -20,11 +20,11 @@
     <div class="background"></div>
     <div class="menu">
         <nav>
-            <a href="/HTML/ofertas_descripcion_en.html" class="burger_menu_item_1" style="animation-delay: 0.1s">Offers</a>
-            <a href="/HTML/rutas_en.html" class="burger_menu_item_2" style="animation-delay: 0.3s">Paths</a>
-            <a href="/HTML/acerca_en.html" class="burger_menu_item_3" style="animation-delay: 0.4s">About</a>
-            <a href="/HTML/signup_en.html" class="burger_menu_item_4" style="animation-delay: 0.5s">Sign Up</a>
-            <a href="/HTML/signin_en.html" class="burger_menu_item_5" style="animation-delay: 0.6s">Log In</a>
+            <a href="HTML/ofertas_descripcion_en.html" class="burger_menu_item_1" style="animation-delay: 0.1s">Offers</a>
+            <a href="HTML/rutas_en.html" class="burger_menu_item_2" style="animation-delay: 0.3s">Paths</a>
+            <a href="HTML/acerca_en.html" class="burger_menu_item_3" style="animation-delay: 0.4s">About</a>
+            <a href="HTML/signup_en.html" class="burger_menu_item_4" style="animation-delay: 0.5s">Sign Up</a>
+            <a href="HTML/signin_en.html" class="burger_menu_item_5" style="animation-delay: 0.6s">Log In</a>
         </nav>
     </div>
     <!-- CONTENT -->
@@ -33,7 +33,7 @@
         <nav class="container_menu">
             <header class="header_container">
                 <span class="brackets bracket_1">{</span>
-                <a href="/index_en.html" class="title" title="{First_CodeJob}">First_CodeJob</a>
+                <a href="index_en.html" class="title" title="{First_CodeJob}">First_CodeJob</a>
                 <span class="brackets bracket_2">}</span>
             </header>
             <ul class="container_list">
