--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{First_CodeJob}</title>
-    <link rel="stylesheet" href="/CSS/variables.css">
-    <link rel="stylesheet" href="/CSS/header.css">
-    <link rel="stylesheet" href="/CSS/index.css">
-    <link rel="stylesheet" href="/CSS/footer.css">
+    <link rel="stylesheet" href="CSS/variables.css">
+    <link rel="stylesheet" href="CSS/header.css">
+    <link rel="stylesheet" href="CSS/index.css">
+    <link rel="stylesheet" href="CSS/footer.css">
     <script type="text/javascript">
         const toggleMenu = () => document.body.classList.toggle("open");
     </script>
@@ -20,11 +20,11 @@
     <div class="background"></div>
     <div class="menu">
         <nav>
-            <a href="/HTML/ofertas.html" class="burger_menu_item_1" style="animation-delay: 0.1s">Ofertas</a>
-            <a href="/HTML/rutas.html" class="burger_menu_item_2" style="animation-delay: 0.3s">Rutas</a>
-            <a href="/HTML/acerca.html" class="burger_menu_item_3" style="animation-delay: 0.4s">Acerca de</a>
-            <a href="/HTML/signup.html" class="burger_menu_item_4" style="animation-delay: 0.5s">Registrarse</a>
-            <a href="/HTML/signin.html" class="burger_menu_item_5" style="animation-delay: 0.6s">Iniciar Sesión</a>
+            <a href="HTML/ofertas.html" class="burger_menu_item_1" style="animation-delay: 0.1s">Ofertas</a>
+            <a href="HTML/rutas.html" class="burger_menu_item_2" style="animation-delay: 0.3s">Rutas</a>
+            <a href="HTML/acerca.html" class="burger_menu_item_3" style="animation-delay: 0.4s">Acerca de</a>
+            <a href="HTML/signup.html" class="burger_menu_item_4" style="animation-delay: 0.5s">Registrarse</a>
+            <a href="HTML/signin.html" class="burger_menu_item_5" style="animation-delay: 0.6s">Iniciar Sesión</a>
         </nav>
     </div>
     <!-- CONTENT -->
@@ -33,7 +33,7 @@
         <nav class="container_menu">
             <header class="header_container">
                 <span class="brackets bracket_1">{</span>
-                <a href="/index.html" class="title" title="{First_CodeJob}">First_CodeJob</a>
+                <a href="index.html" class="title" title="{First_CodeJob}">First_CodeJob</a>
                 <span class="brackets bracket_2">}</span>
             </header>
             <ul class="container_list">
@@ -66,34 +66,34 @@
           <!-- COMPANY_IMAGES -->
           <div class="box_container_companies">
               <div class="company_boxes caja_1">
-                  <img class="image_companies" src="/img/openAI_company.png" alt="OpenAI" title="OpenAI">
+                  <img class="image_companies" src="img/openAI_company.png" alt="OpenAI" title="OpenAI">
               </div>
               <div class="company_boxes caja_2">
-                  <img class="image_companies" src="/img/cisco_company.jpg" alt="Cisco" title="Cisco">
+                  <img class="image_companies" src="img/cisco_company.jpg" alt="Cisco" title="Cisco">
               </div>
               <div class="company_boxes caja_3">
-                  <img class="image_companies" src="/img/mawesi_company.png" alt="Mawesi" title="Mawesi">
+                  <img class="image_companies" src="img/mawesi_company.png" alt="Mawesi" title="Mawesi">
               </div>
               <div class="company_boxes caja_4">
-                  <img class="image_companies" src="/img/google_company.jpg" alt="Google" title="Google">
+                  <img class="image_companies" src="img/google_company.jpg" alt="Google" title="Google">
               </div>
               <div class="company_boxes caja_5">
-                  <img class="image_companies" src="/img/kaspersky_company.png" alt="Kaspersky" title="Kaspersky">
+                  <img class="image_companies" src="img/kaspersky_company.png" alt="Kaspersky" title="Kaspersky">
               </div>
               <div class="company_boxes caja_6">
-                  <img class="image_companies" src="/img/mercado_libre_company.png" alt="Mercado Libre" title="Mercado Libre">    
+                  <img class="image_companies" src="img/mercado_libre_company.png" alt="Mercado Libre" title="Mercado Libre">    
               </div>
               <div class="company_boxes caja_7">
-                  <img class="image_companies" src="/img/redhat_company.jpg" alt="RedHat" title="RedHat">
+                  <img class="image_companies" src="img/redhat_company.jpg" alt="RedHat" title="RedHat">
               </div>
               <div class="company_boxes caja_8">
-                  <img class="image_companies" src="/img/globant_company.png" alt="Globant" title="Globant">
+                  <img class="image_companies" src="img/globant_company.png" alt="Globant" title="Globant">
               </div>
               <div class="company_boxes caja_9">
-                  <img class="image_companies" src="/img/meta_company.png" alt="Meta" title="Meta">   
+                  <img class="image_companies" src="img/meta_company.png" alt="Meta" title="Meta">   
               </div>
               <div class="company_boxes caja_10">
-                  <img class="image_companies" src="/img/x_company.jpg" alt="x" title="x">
+                  <img class="image_companies" src="img/x_company.jpg" alt="x" title="x">
             </div>
         </div>
         </main>
